--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ compileJava {
 
 dependencies {
     // Choose Jingle version: https://jitpack.io/#DuncanRuns/Jingle/
-    implementation 'com.github.DuncanRuns:Jingle:v0.1.6'
+    implementation 'com.github.DuncanRuns:Jingle:87e4aafcd7'
 }
 
 
