--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
 # Plugin properties
-maven_group=xyz.duncanruns.jingle.exampleplugin
-plugin_version=1.0.0
-archives_base_name=jingle-example-plugin
+maven_group=xyz.duncanruns.jingle.eyesee
+plugin_version=0.1.0
+archives_base_name=jingle-eyesee-plugin
